--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>primer pagina</title>
-  </head>
-  <body>
+COMANDOS BASICOS
+* git init Oye Git, voy a usar estos documentos contigo ¿vale?
+* git add <file> Pasa los docs a staging area
+* git add . Pasa todos los archivos
+* git commit -m "comentario" Lo mismo que el commit regular, pasa los docs de staging area a repository, pero ahora no necesitas entrar a VIN
+* git status Ver en que status (wd, sa, r) están los docs
+* git push Subir los docs a un server (Github)
+* git pull  Traer los docs de un server, traer los cambios de tus compañeros
+* git clone Hacerte una copia de lo que está en el server a tu PC
+* git checkout -- <file> Para revertir los cambios de los archivos
+* git diff <file> Para ver las diferencias hechas en los archivos
+* git branch Ver las ramas que hay ("master" es la rama default)
+* git branch "nombre" Crear una nueva rama
+* git checkout "nombre" Ir a una rama en especifico
 
-  </body>
-</html>
+*  git config -- global user.email "email" Para configurar email del usuario
+*  git config -- global user.name "nombre" Para configurar nombre del usuario
